@@ -12,10 +12,12 @@ Manipulation Tools for Class 'dist'
 Converts a 'dist' object into vector and vice versa.
 }
 \usage{
-vec2dist(x, size, labels = NULL, diag = FALSE, upper = FALSE, call = FALSE, method = NULL)
+vec2dist(x, size, labels = NULL, diag = FALSE, upper = FALSE, 
+call = FALSE, method = NULL)
 dist2vec(x)
 is.dist(x)
-\method{as.data.frame}{dist}(x, row.names = NULL, optional = FALSE, ...)
+\method{as.data.frame}{dist}(x, row.names = NULL, 
+optional = FALSE, dim.names = FALSE, ...)
 }
 \arguments{
   \item{x}{
@@ -32,6 +34,10 @@ Row names for the resulting data frame.
 }
   \item{optional}{
 Argument not yet used.
+}
+  \item{dim.names}{
+Logical, if \code{TRUE}, names stored in the \code{Labels} attribute of the 
+\code{dist} object are returned as factors instead of row/column indices.
 }
   \item{\dots}{
 Other arguments passed to functions.
@@ -62,10 +68,13 @@ vec2dist(1:3, 3)
 vec2dist(1:3, 3, diag = TRUE)
 vec2dist(1:3, 3, diag = TRUE, upper = TRUE)
 vec2dist(1:3, 3, labels=letters[1:3])
-(x <- dist(1:5))
+x <- dist(1:5)
+attr(x, "Labels") <- LETTERS[1:5]
+x
 is.dist(x)
 dist2vec(x)
 as.data.frame(x)
+as.data.frame(x, dim.names = TRUE)
 }
 \keyword{ manip }
 
