@@ -2,6 +2,9 @@ MEFA VERSIONS
 
 Version 3.1-1 -- July 10, 2009 (opened - r407)
 
+    * fill.na: accepts 1 dimensional vectors.
+    * as.data.frame.dist: now returns labels of the
+      dist object (dim.names=TRUE).
     * inflate: is now obsolete, rep.data.frame is
       used instead.
 
